[DMG-420] Add without parameters flag to trigger

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -622,7 +622,9 @@ job(type: Maven) {
       timeMargin 4000
     }
     downstreamParameterized {
-      trigger('dev-deploy')
+        trigger('dev-deploy') {
+            currentBuild()
+        }
     }
   }
   configure { project ->
