[DMG-460] Configure Sonar to show trends on it

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -216,7 +216,9 @@ job(type: Maven) {
     project / publishers << "hudson.plugins.jira.JiraIssueUpdater"(plugin:"jira@<%= @plugins['jira'] %>")
   }
   configure { project ->
-    project / publishers << "hudson.plugins.sonar.SonarPublisher"(plugin:"sonar@<%= @plugins['sonar'] %>")
+    project / publishers << "hudson.plugins.sonar.SonarPublisher"(plugin:"sonar@"){
+        jobAdditionalProperties('-Dsonar.profile="Sonar way with Findbugs"')
+    }
   }
 }
 
