Fix jenkins_setup step in manifest template

--- a/manifests/templates/main.yaml.erb
+++ b/manifests/templates/main.yaml.erb
@@ -313,7 +313,7 @@ application:
                           cicd_infrastructure:
                             jenkins:
                               pubkey: ""
-                              <% if config['components'].include? 'jenkins' %>
+                              <% if config['components'].include? 'gerrit' %>
                               gerrit-trigger:
                                 host: "{$.environment.gerrit.gerrit_public_ips[0]}"
                               <% end -%>
