[DMG-444] Fix mistype in settings.xml

--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
@@ -19,7 +19,7 @@
     &lt;mirror&gt;
       &lt;id&gt;central&lt;/id&gt;
       &lt;mirrorOf&gt;central&lt;/mirrorOf&gt;
-      &lt;name&gt;Macen Central Mirror.&lt;/name&gt;
+      &lt;name&gt;Maven Central Mirror.&lt;/name&gt;
       &lt;url&gt;${env.NEXUS_URL}/content/repositories/central&lt;/url&gt;
     &lt;/mirror&gt;
 <% if @use_jbehave_proxy == 'true' %>
