Fix problem with job dsl

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -270,8 +270,9 @@ def workspace_path = env_vars.WORKSPACE
 
 def qubellOutputFile = new File("${workspace_path}/qubell_output.json")
 def userJson = new JsonSlurper().parseText(qubellOutputFile.text)
+def webapp_endpoint = userJson.returnValues.'output.webapp_endpoint'
 
-new File("petclinic_url.properties").withWriter{ it << "PETCLINIC_URL=${userJson.returnValues.'output.webapp_endpoint'}"}
+new File("petclinic_url.properties").withWriter{ it << "PETCLINIC_URL=${webapp_endpoint}"}
 """
         }
         groovyName("Groovy-default")
