--- a/cookbooks/cicd_infrastructure/templates/default/openldap/root.ldif.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/openldap/root.ldif.erb
@@ -26,3 +26,9 @@ objectClass: top
 objectClass: groupOfNames
 cn: developers
 member: cn=admin,<%= @basedn %>
+
+dn: cn=administrators,ou=groups,<%= @basedn %>
+objectClass: top
+objectClass: groupOfNames
+cn: developers
+member: cn=admin,<%= @basedn %>
