--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -532,7 +532,7 @@ job(type: Maven) {
   }
   preBuildSteps {
     copyArtifacts('fb-build', targetPath = 'version.properties') {
-        upstreamBuild(true)
+        buildNumber('\${buildNumber}') 
     }
   }
   rootPOM("spring-petclinic-test/pom.xml")
@@ -689,7 +689,7 @@ job(type: Maven) {
   }
   preBuildSteps {
     copyArtifacts('dev-build', targetPath = 'version.properties') {
-        upstreamBuild(true)
+        buildNumber('\${buildNumber}') 
     }
   }
   rootPOM("spring-petclinic-test/pom.xml")
