Fix groovy script for parsing qubell output

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -274,7 +274,8 @@ def qubellOutputFile = new File("\${workspace_path}/qubell_output.json")
 def userJson = new JsonSlurper().parseText(qubellOutputFile.text)
 def webapp_endpoint = userJson.returnValues.'output.webapp_endpoint'
 
-new File("petclinic_url.properties").withWriter{ it << "PETCLINIC_URL=\${webapp_endpoint}"}
+def f= new File("petclinic_url.properties")
+f.withWriter{ it << "PETCLINIC_URL=${webapp_endpoint}"}
 """
         }
         groovyName("Groovy-default")
