Fix bug with selenium url on dashboard

--- a/cookbooks/cicd_infrastructure/templates/default/dashboard/services.json.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/dashboard/services.json.erb
@@ -38,7 +38,7 @@
     {
         "name": "Selenium Grid",
         "ip": "<%= @services['selenium']['ip'] %>",
-        "endpoint": "<%= @services['selenium']['ip'] %>",
+        "endpoint": "<%= @services['selenium']['endpoint'] %>",
         "img": "img/selenium.jpg"
     }
 ]
