--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.tasks.Mailer.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/hudson.tasks.Mailer.xml.erb
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <hudson.tasks.Mailer_-DescriptorImpl plugin="mailer@<%= @plugin_version %>">
-  <smtpHost><%= @smpt_host %></smtpHost>
+  <smtpHost><%= @smtp_host %></smtpHost>
   <useSsl>false</useSsl>
   <charset>UTF-8</charset>
 </hudson.tasks.Mailer_-DescriptorImpl>
